opa/gatekeeper/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - image: busybox
        command: [ "/bin/sh", "-c", "--" ]
        args: [ "while true; printenv; do sleep 60; done;" ]
        imagePullPolicy: IfNotPresent
        name: test
